--- a/css/technology.css
+++ b/css/technology.css
@@ -45,6 +45,11 @@ header {
   padding: 50px 0 10px 50px;
 }
 
+span {
+  display: inline-block;
+  margin-right: 0.5em;
+}
+
 .logo-container {
   display: flex;
   align-items: center;
@@ -189,6 +194,10 @@ header {
 @media (max-width: 1340px) {
   header {
     padding: 0 0 0 50px;
+  }
+
+  span {
+    display: none;
   }
 
   .first-text {
